feat: ship multi-version backend bands 1.8-1.21
Lower shared libs to Java 8, add four backend JARs plus compat matrix for cloud install selection. Old aero-paper asset becomes aero-paper-1_21.